<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wildgamerappears.tbainnotes.ToDoActivity" >

    <item
        android:id="@+id/menu_new_item"
        android:icon="@drawable/cr_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/new_item"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/trash"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/folder"
        android:showAsAction="ifRoom|withText"
        android:title="@string/archive"/>
    <item
        android:id="@+id/menu_email"
        android:icon="@drawable/mail"
        android:showAsAction="ifRoom|withText"
        android:title="@string/email"/>
    <item
        android:id="@+id/email_all"
        android:icon="@drawable/mail_all"
        android:showAsAction="ifRoom|withText"
        android:title="@string/email_all"/>
    <item
        android:id="@+id/select_all"
        android:icon="@drawable/select_all"
        android:showAsAction="ifRoom|withText"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/unselect_all"
        android:icon="@drawable/unselect_all"
        android:showAsAction="ifRoom|withText"
        android:title="@string/unselect_all"/>
    <item
        android:id="@+id/menu_go_to_archive"
        android:icon="@drawable/folder_go_to"
        android:showAsAction="ifRoom|withText"
        android:title="@string/go_to_archive"/>
    <item
        android:id="@+id/show_stats"
        android:icon="@drawable/view_stats"
        android:showAsAction="ifRoom|withText"
        android:title="@string/view_stats"/>

</menu>